# ouiwah

./: .gitignore  .ocamlformat  dune-project  ouiwah.opam
lib/: .gitignore  ast.ml  ast.re  ast_printer.ml  bindings.re  dune  haha.re  interpreter.ml  jotai.re  lexer.mll  lol.re  parser.mly  print_ast.re  rip.re
test/: dune
