(library
 (name ouiwah)
 (libraries menhirLib base yojson ppx_deriving_yojson.runtime)
 (modules
  ast
  lexer
  parser
  ast_printer
  interpreter
  lol
  print_ast
  haha
  rip
  bindings)
 (preprocess
  (pps ppx_jane ppx_deriving.std ppx_deriving_yojson)))

(menhir
 (modules parser))

(ocamllex lexer)

; (melange.emit
;  (target ouiwah_js)
;  (alias ouiwah)
;  (libraries ouiwah)
;  (modules :standard)
;  (module_systems es6))
