(library
 (name ouiwah)
 (libraries menhirLib base yojson core)
 (modules
  ast
  lexer
  parser
  ast_printer
  interpreter
  lol
  print_ast
  haha
  rip
  bindings
  jotai)
 (preprocess
  (pps ppx_jane ppx_yojson_conv)))

(menhir
 (modules parser))

(ocamllex lexer)

; (melange.emit
;  (target ouiwah_js)
;  (alias ouiwah)
;  (libraries ouiwah)
;  (modules :standard)
;  (module_systems es6))
